# native-test-process

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  go.mod  matrix.toml
.github/workflows/: build.yml  release.yml
builder/: __init__.py  __main__.py  manifest.py  markers.py  matrix.py  pack.py  selftest.py  symbols.py  util.py
builder/toolchains/: __init__.py  cpp.py  go.py  rust.py
cmake/toolchains/: android.cmake  wasi.cmake
docs/: DAP-TESTS.md  DESIGN.md
fixtures/crash/: crash.cpp  crash.go  crash.rs
fixtures/hello/: hello.cpp  hello.go  hello.rs
fixtures/spin/: spin.cpp  spin.go  spin.rs
